--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@ layout: default
 ---
 
 
-<!-- {% include image.html url="/images/profile.jpg" caption="A sassy caption here" width=225 align="right" %} -->
-
 <div class="home">
 
 
-
-<p>My name is Randy Parrish, and I am an <a href="https://www.sph.emory.edu/departments/bios/index.html">biostatistics</a>
+<p>My name is Randy Parrish, and I am a <a href="https://www.sph.emory.edu/departments/bios/index.html">biostatistics</a>
  MSPH student at the <a href="https://www.sph.emory.edu">Rollins School of Public Health</a>
  and a research assistant <a href="https://yanglab-emory.github.io/">YangLab</a>.<br><br>
 
@@ -20,3 +17,10 @@ To get a better insight on my life so far, you can have a look at my <a href="/c
 </p>
 
 </div>
+
+<br>
+
+{% include image.html url="/images/boo_assisting.jpg" caption="Boo assists." width=325 align="left" %}
+
+
+{% include image.html url="/images/stella_helping.jpg" caption="Stella is very helpfull." width=425 align="right" %}
