remove link to page that doesnt exist

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 I maintain a list of my publications, research projects and implementations under the <a href="/research/">Research</a> tab. You may also check out my <a href="">Github profile.</a><br><br>
 
 To get a better insight on my life so far, you can have a look at my <a href="/cv">curriculum vitae</a>.
- Feel free to read a bit more <a href="/about">about me</a>.
+ <!-- Feel free to read a bit more <a href="/about">about me</a>. -->
 </p>
 
 </div>
