--- a/index.html
+++ b/index.html
@@ -23,4 +23,4 @@ To get a better insight on my life so far, you can have a look at my <a href="/c
 {% include image.html url="/images/boo_assisting.jpg" caption="Boo assists." width=325 align="left" %}
 
 
-{% include image.html url="/images/stella_helping.jpg" caption="Stella is very helpfull." width=425 align="right" %}
+{% include image.html url="/images/stella_helping.jpg" caption="Stella is very helpful." width=425 align="right" %}
