--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 <div class="home">
 
 
-<p>My name is Randy Parrish, and I am a research specialist at <a href="https://yanglab-emory.github.io/">YangLab</a> and recent graduate of the Emory <a href="https://www.sph.emory.edu/departments/bios/index.html">biostatistics</a>
+<p>My name is Randy Parrish. I am a research specialist at <a href="https://yanglab-emory.github.io/">YangLab</a> and recent graduate of the Emory <a href="https://www.sph.emory.edu/departments/bios/index.html">biostatistics</a>
  MSPH prrogram at the <a href="https://www.sph.emory.edu">Rollins School of Public Health</a>.
 
 
