--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@ layout: default
 <div class="home">
 
 
-<p>My name is Randy Parrish. I am a research specialist at <a href="https://yanglab-emory.github.io/">YangLab</a> and recent graduate of the Emory <a href="https://www.sph.emory.edu/departments/bios/index.html">biostatistics</a>
- MSPH prrogram at the <a href="https://www.sph.emory.edu">Rollins School of Public Health</a>.
-
+<p>My name is Randy Parrish. I am a PhD in the Emory <a href="https://www.sph.emory.edu/departments/bios/index.html">Biostatistics</a> department and a member of <a href="https://yanglab-emory.github.io/">YangLab</a> .
 
 I maintain a list of my publications, research projects and implementations under the <a href="/research/">Research</a> tab. You may also check out my <a href="">Github profile.</a><br><br>
 
